# New_Pipeline

./: README.md  pyproject.toml
Finetune/: README.md  requirements.txt  setup.sh  train.sh
Finetune/finetune/: prompt.py  train_lora.py
configs/: default.yaml
src/: explain.py  pipeline.py
src/cli/: run.py
src/fallback/: cot.py
src/solver/: z3_runner.py
src/translator/: fol_converter.py  infer.py  parse.py  prompt.py  train_lora.py
